@@ -4,6 +4,8 @@
 
 Current Development
 
+* GORA-419: AccumuloStore.put deletes entire row when updating map/array field (gerhardgossen via lewismc)
+
 * GORA-420: AccumuloStore.createSchema fails when table already exists (gerhardgossen via lewismc)
 
 * GORA-427 Configure MongoDB ReadPreference and WriteConcern (drazzib)
